refactor: now search methods work with opt params
ticket controller injected on raffle controller